--- a/CarRental/WebContent/css/login.css
+++ b/CarRental/WebContent/css/login.css
@@ -12,7 +12,7 @@ html, body {
 height: 100%;   
 font-family: "Helvetica Neue", Helvetica, sans-serif;   
 color: #444;   
--webkit-font-smoothing: antialiased;    background: #fff;
+-webkit-font-smoothing: antialiased;  background: #fff;
 }
 
 #container {
@@ -80,7 +80,8 @@ input[type=submit] {
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
-    background-color: #FFE4B5;
+    background-color: #3071a9;
+border-color: #285e8e;
 }
 .login-help
 {
